<resources>
    <string name="app_name">User Summary and Infographics</string>
    <string name="title_activity_breakfast">BreakfastActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nameQ">Name: </string>
    <string name="ageQ">Age: </string>
    <string name="weightQ">Weight: </string>
    <string name="emailQ">E-mail: </string>
    <string name="genderQ">Gender: </string>
    <string name="today_meals">Today\'s Meals</string>
    <string name="example_email">johndoe@tamu.edu</string>
    <string name="example_age">0</string>
    <string name="example_name">First Last</string>
</resources>